# caseclosed-generator

./: .env.example  .gitignore  .gitmodules  README.md
.github/: copilot-instructions.md
caseclosed/: viewer.py
caseclosed-generator/: .env.example  .gitignore  README.md  main.py  pyproject.toml
caseclosed-generator/caseclosed/: cli.py  config.py  export.py  pdf_templates.py  persistence.py  viewer.py
caseclosed-generator/caseclosed/generation/: episodes.py  evidence.py  evidence_plan.py  pipeline.py  suspects.py  truth.py
caseclosed-generator/caseclosed/llm/: client.py  prompts.py
caseclosed-generator/caseclosed/models/: case.py  episode.py  evidence.py  suspect.py
caseclosed-generator/caseclosed/pdf_templates/: phone_log.py  receipt.py  sms_log.py
caseclosed/generation/: episodes.py  evidence.py  evidence_plan.py  pipeline.py  suspects.py  truth.py
caseclosed/llm/: client.py  prompts.py
caseclosed/models/: case.py  episode.py  evidence.py
caseclosed/pdf_templates/: __init__.py  _common.py  email.py  facebook_post.py  instagram_post.py  invoice.py  poi_form.py
